[gd_scene load_steps=26 format=4 uid="uid://8d2ip3vepasa"]

[ext_resource type="Script" path="res://scenes/map/win_section.gd" id="1_abk83"]
[ext_resource type="TileSet" uid="uid://c46m43rsog1eh" path="res://scenes/map/map.tres" id="1_deqeg"]
[ext_resource type="AudioStream" uid="uid://bi2gse6i7joki" path="res://assets/Alien Escape!/Sonido Random.wav" id="2_e2u7l"]
[ext_resource type="Texture2D" uid="uid://cer4cgvirvl32" path="res://assets/map/SciFi_DungeonTileset16x16_0x72Like.png" id="2_mc3oj"]
[ext_resource type="Shader" path="res://scenes/player/color_swap.gdshader" id="2_nqfxl"]
[ext_resource type="PackedScene" uid="uid://d1nkf2iut684" path="res://scenes/map/screenWin.tscn" id="4_467om"]
[ext_resource type="FontFile" uid="uid://bqe585bi4f3ik" path="res://assets/80s-retro-future.ttf" id="7_jlrdh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vbyxv"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4645"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cbbkv"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ap0k4"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xqjf0"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0pwil"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dkt4k"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s4hoo"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lwi0x"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sv5s0"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xi8gv"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_urca0"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bjwir"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5pdop"]
shader = ExtResource("2_nqfxl")
shader_parameter/from = Color(0.156863, 0.207843, 0.258824, 1)
shader_parameter/to = Color(0.216567, 0.269717, 0.350895, 1)
shader_parameter/tolerance = 0.25

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fs1wg"]
texture = ExtResource("2_mc3oj")
0:0/0 = 0
0:0/0/material = SubResource("ShaderMaterial_vbyxv")
1:0/0 = 0
1:0/0/material = SubResource("ShaderMaterial_xqjf0")
2:0/0 = 0
2:0/0/material = SubResource("ShaderMaterial_dkt4k")
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
5:0/0/material = SubResource("ShaderMaterial_urca0")
6:0/0 = 0
6:0/0/material = SubResource("ShaderMaterial_bjwir")
7:0/0 = 0
8:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
0:1/0/material = SubResource("ShaderMaterial_c4645")
1:1/0 = 0
2:1/0 = 0
2:1/0/material = SubResource("ShaderMaterial_s4hoo")
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
0:2/0/material = SubResource("ShaderMaterial_cbbkv")
1:2/0 = 0
1:2/0/material = SubResource("ShaderMaterial_0pwil")
2:2/0 = 0
2:2/0/material = SubResource("ShaderMaterial_lwi0x")
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
7:2/0/material = SubResource("ShaderMaterial_5pdop")
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
0:5/0/material = SubResource("ShaderMaterial_ap0k4")
1:5/0 = 0
2:5/0 = 0
2:5/0/material = SubResource("ShaderMaterial_sv5s0")
3:5/0 = 0
4:5/0 = 0
4:5/0/material = SubResource("ShaderMaterial_xi8gv")
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0

[sub_resource type="TileSet" id="TileSet_uvdlk"]
sources/0 = SubResource("TileSetAtlasSource_fs1wg")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_gevmo"]
properties/0/path = NodePath(".:A_condition")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:B_condition")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:C_condition")
properties/2/spawn = true
properties/2/replication_mode = 2

[sub_resource type="Theme" id="Theme_8clkv"]
default_font = ExtResource("7_jlrdh")

[node name="WinSection" type="Node2D"]
script = ExtResource("1_abk83")
sound = ExtResource("2_e2u7l")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAAABAAEAAAAAAABAAAABAAIAAIAAAAAAAEABAABAAMAAAAAAAIABAABAAMAAAAAAAMABAABAAMAAAAAAAQABAABAAMAAAAAAAUABAABAAMAAAAAAAYABAABAAMAAAAAAAcABAABAAMAAAAAAAgABAAEAAAAAAABAAgABAAEAAAAAAACAAAABAAHAAAAAAADAAAABAAGAAAAAAALAAAABAAHAAAAAAAMAAAABAAGAAAAAAANAAAABAAIAAIAAAAOAAAABAAFAAAAAAACAAgABAAEAAAAAAADAAgABAAEAAAAAAAEAAgABAAEAAAAAAAFAAgABAAEAAAAAAAGAAgABAAEAAAAAAAHAAgABAAEAAAAAAAIAAgABAAEAAAAAAAJAAgABAAEAAAAAAAKAAgABAAEAAAAAAALAAgABAAEAAAAAAAMAAgABAAEAAAAAAANAAgABAAEAAAAAAAOAAgABAAEAAAAAAAOAAEABAAFAAEAAAAOAAIABAAFAAEAAAAOAAUABAAFAAEAAAAOAAYABAAFAAEAAAAOAAQABAAFAAEAAAAOAAMABAAFAAEAAAAOAAcABAAFAAEAAAAEAAEABAAEAAAAAAALAAEABAAHAAAAAAADAAEABAAGAAAAAAAFAAEABAAEAAAAAAAGAAEABAAEAAAAAAAJAAEABAAEAAAAAAABAAEABAAAAAAAAAABAAIABAAAAAEAAAABAAMABAAAAAEAAAACAAEABAABAAMAAAACAAIABAABAAMAAAACAAMABAABAAMAAAADAAIABAAGAAQAAAADAAMABAABAAMAAAAEAAIABAAEAAAAAAAEAAMABAABAAMAAAAFAAIABAAEAAAAAAAFAAMABAABAAMAAAAGAAIABAAEAAAAAAAGAAMABAABAAMAAAAHAAIABAAEAAAAAAAHAAMABAABAAMAAAAIAAIABAAEAAAAAAAIAAMABAABAAMAAAAJAAIABAAEAAAAAAAJAAMABAABAAMAAAAKAAIABAAEAAAAAAAKAAMABAABAAMAAAALAAIABAAHAAAAAAALAAMABAABAAMAAAAMAAEABAABAAMAAAAMAAIABAABAAMAAAAMAAMABAABAAMAAAANAAEABAACAAMAAAANAAIABAACAAAAAAANAAMABAACAAEAAAALAAUABAABAAEAAAALAAYABAABAAEAAAALAAcABAABAAIAAAAMAAUABAABAAEAAAAMAAYABAABAAEAAAAMAAcABAABAAIAAAANAAUABAACAAEAAAANAAYABAACAAEAAAANAAcABAACAAIAAAABAAUABAAAAAEAAAABAAYABAAAAAEAAAABAAcABAAAAAIAAAACAAUABAABAAEAAAACAAYABAABAAEAAAACAAcABAABAAIAAAADAAUABAABAAEAAAADAAYABAABAAEAAAADAAcABAABAAIAAAAEAAQABAABAAEAAAAFAAQABAABAAEAAAAGAAUABAABAAEAAAAHAAUABAABAAEAAAAIAAUABAABAAEAAAAIAAYABAABAAEAAAAJAAYABAABAAEAAAAKAAYABAABAAEAAAAMAAQABAABAAEAAAAHAAQABAABAAEAAAAGAAQABAABAAEAAAAFAAUABAABAAEAAAAEAAUABAABAAEAAAADAAQABAABAAEAAAACAAQABAABAAEAAAAEAAYABAABAAEAAAAFAAYABAABAAEAAAAGAAYABAABAAEAAAAJAAUABAABAAEAAAAHAAYABAABAAEAAAAKAAUABAABAAEAAAAKAAQABAABAAEAAAALAAQABAABAAEAAAAJAAQABAABAAEAAAAIAAQABAABAAEAAAANAAQABAACAAEAAAABAAQABAAAAAEAAAAEAAcABAABAAIAAAAFAAcABAABAAIAAAAGAAcABAABAAIAAAAHAAcABAABAAIAAAAIAAcABAABAAIAAAAJAAcABAABAAIAAAAKAAcABAABAAIAAAAEAAAABAAEAAAAAAAFAAAABAAEAAAAAAAGAAAABAAEAAAAAAAHAAAABAAEAAAAAAAIAAAABAAEAAAAAAAJAAAABAAEAAAAAAAKAAAABAAEAAAAAAAHAAEABAAEAAAAAAAIAAEABAAEAAAAAAAKAAEABAAEAAAAAAA=")
tile_set = ExtResource("1_deqeg")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAKAAAAAAABAAAAAAAEAAEAAAAHAAIAAAAGAAEAAAAHAAIAAAAHAAEAAAAHAAIAAAAJAAEAAAAHAAIAAAAKAAEAAAAHAAIAAAAIAAEAAAAHAAIAAAAFAAEAAAAHAAIAAAADAAAAAAAAAAAAAAALAAAAAAACAAAAAAADAAIAAAAAAAIAAAALAAIAAAACAAIAAAALAAEAAAACAAEAAAADAAEAAAAAAAEAAAAKAAIAAAAGAAAAAAAEAAIAAAAFAAAAAAAFAAIAAAAEAAUAAAAGAAIAAAAFAAAAAAAHAAIAAAACAAUAAAAIAAIAAAAFAAAAAAAJAAIAAAAAAAUAAAAPAAAAAAAHAAIAAAAPAAEAAAAHAAIAAAAPAAIAAAAHAAIAAAAPAAMAAAAHAAIAAAAPAAQAAAAHAAIAAAAPAAUAAAAHAAIAAAAPAAYAAAAHAAIAAAAPAAcAAAAHAAIAAAAPAAgAAAAHAAIAAAAQAAAAAAAHAAIAAAAQAAEAAAAHAAIAAAAQAAIAAAAHAAIAAAAQAAMAAAAHAAIAAAAQAAQAAAAHAAIAAAAQAAUAAAAHAAIAAAAQAAYAAAAHAAIAAAAQAAcAAAAHAAIAAAAQAAgAAAAHAAIAAAARAAgAAAAHAAIAAAASAAgAAAAHAAIAAAATAAgAAAAHAAIAAAATAAcAAAAHAAIAAAATAAYAAAAHAAIAAAATAAUAAAAHAAIAAAATAAQAAAAHAAIAAAATAAMAAAAHAAIAAAATAAIAAAAHAAIAAAATAAEAAAAHAAIAAAATAAAAAAAHAAIAAAASAAAAAAAHAAIAAAARAAAAAAAHAAIAAAARAAEAAAAHAAIAAAASAAEAAAAHAAIAAAARAAIAAAAHAAIAAAASAAIAAAAHAAIAAAARAAMAAAAHAAIAAAASAAMAAAAHAAIAAAASAAQAAAAHAAIAAAARAAQAAAAHAAIAAAASAAUAAAAHAAIAAAARAAUAAAAHAAIAAAASAAYAAAAHAAIAAAARAAYAAAAHAAIAAAARAAcAAAAHAAIAAAASAAcAAAAHAAIAAAA=")
tile_set = SubResource("TileSet_uvdlk")

[node name="ScreenWinA" parent="." instance=ExtResource("4_467om")]
position = Vector2(320, 128)
role = 1

[node name="ScreenWinB" parent="." instance=ExtResource("4_467om")]
position = Vector2(448, 128)
role = 2

[node name="ScreenWinC" parent="." instance=ExtResource("4_467om")]
position = Vector2(576, 128)
role = 3

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_gevmo")

[node name="Label" type="Label" parent="."]
offset_left = 218.0
offset_top = 46.0
offset_right = 572.0
offset_bottom = 69.0
scale = Vector2(1.25, 1.25)
theme = SubResource("Theme_8clkv")
text = "Confirm Base Self-Destrucction? (y/n)_"

[connection signal="playerAready" from="ScreenWinA" to="." method="Aready"]
[connection signal="playerBready" from="ScreenWinB" to="." method="Bready"]
[connection signal="playerCready" from="ScreenWinC" to="." method="Cready"]
